changes on footer dimensions on smaller screens and correct code of search bar css

--- a/src/pages/Home/SearchBar/searchbar.css
+++ b/src/pages/Home/SearchBar/searchbar.css
@@ -74,7 +74,7 @@
   background: var(--primary-hover-color);
 }
 
-@media (max-width: 1020px) {
+@media (max-width: 1030px) {
   .backgroundImage {
     height: 200px;
   }
